--- a/style.css
+++ b/style.css
@@ -1,12 +1,46 @@
-*{
+body{
     margin: 0;
-    padding:0;
+    padding: 0;
+}
+/*---------
+ top part 
+ -----------*/
+.banner{
+    display: flex;
+    background-color: black;
+    color: white;
+    height: 646px;
+    width: 1321px;
+    margin-top: 50px;
+    margin-left: 105px;
+    border-radius: 25px;
 }
 .players{
-    background-color: black;
-    border-radius: 4px;
-    width: 1000px;
-    margin: 0 auto;
-    padding: 0;
-    
+    width: 513px;
+    height: 424px;
+    margin-top: 111px;
+    margin-left: 106px;
+    margin-right: 24px;
+}
+.players h1{
+    font-size: 70px;
+    font-weight: 700;
+    line-height: 80px;
+  
+}
+.players p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.player{
+    margin-top: 33px;
+    margin-right: 79px;
+}
+.player img{
+
+    height: 613px;
+    width: 581px;
+   
 }
