--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Splash', cursive;
 }
 /*---------
  top part 
@@ -63,3 +64,6 @@ body{
     line-height: 23.46px;
     color: white;
 }
+/*------------------
+top part ends
+----------------*/
