--- a/style.css
+++ b/style.css
@@ -3,6 +3,27 @@ body{
     padding: 0;
     font-family: 'Splash', cursive;
 }
+@media screen and (max-width: 576px ) {
+    
+}
+/*----medium screen---*/
+@media screen and (min-width: 834px) and (max-width: 992px){
+    .banner{
+       
+        
+        
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 24px;
+        margin: 24px;
+        margin-left: 12px;
+    }
+    }
+
+    
+
 /*---------
  top part 
  -----------*/
@@ -82,6 +103,7 @@ top part ends
 .bloggings{
     display: flex;
     margin: 0 auto;
+    padding-top: 60px;
     width: 1320px;
     height: 1000px;
 
