--- a/style.css
+++ b/style.css
@@ -3,24 +3,8 @@ body{
     padding: 0;
     font-family: 'Splash', cursive;
 }
-@media screen and (max-width: 576px ) {
-    
-}
+
 /*----medium screen---*/
-@media screen and (min-width: 834px) and (max-width: 992px){
-    .banner{
-       
-        
-        
-    }
-    .blogs{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        gap: 24px;
-        margin: 24px;
-        margin-left: 12px;
-    }
-    }
 
     
 
@@ -147,10 +131,17 @@ top part ends
 }
 .blogs{
     display: grid;
+    
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
     margin: 24px;
     margin-left: 12px;
+}
+.blog{
+    border: 1px solid gray;
+    border-radius: 10px;
+    
+    
 }
 /*--------------
 main parts ends
@@ -192,3 +183,28 @@ hr{
 /*----------
 footer ends
 --------*/
+@media screen and (max-width: 576px ) {
+    
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 24px;
+        margin: 24px;
+        margin-left: 12px;
+    }
+}
+@media screen and (min-width: 834px) and (max-width: 992px){
+    .banner{
+       
+        width: 834px;
+        
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 24px;
+        margin: 24px;
+        margin-left: 12px;
+    }
+    }
+   
